--- a/portfolio.html
+++ b/portfolio.html
@@ -14,41 +14,42 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+    <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body class="page">
     <header class="page-header">
       <div class="container main-nav">
         <!-- header nav -->
         <nav class="nav">
-          <a class="nav-logo" href="./index.html">
-            <span class="first-nav-logo">Web</span>Studio
+          <a class="logo nav-logo" href="./index.html">
+            Web<span class="logo--dark">Studio</span>
           </a>
           <ul class="site-nav">
             <li class="item">
-              <a href="./index.html" class="link">Студия</a>
+              <a href="./index.html" class="site-nav__link">Студия</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link current">Портфолио</a>
+              <a href="./portfolio.html" class="site-nav__link current">Портфолио</a>
             </li>
             <li class="item">
-              <a href="#" class="link">Контакты</a>
+              <a href="#" class="site-nav__link">Контакты</a>
             </li>
           </ul>
         </nav>
         <!-- header contact-->
         <ul class="contact-nav">
           <li class="item">
-            <a href="mailto:info@devstudio.com">
-              <svg width="16px" height="12px">
+            <a href="mailto:info@devstudio.com" class="contact-nav__link">
+              <svg width="16px" height="12px" class="contact-nav__icon">
                 <use href="./images/icons/sprite.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a href="tel:+380961111111">
-              <svg width="10px" height="16px">
+            <a href="tel:+380961111111" class="contact-nav__link">
+              <svg width="10px" height="16px" class="contact-nav__icon">
                 <use href="./images/icons/sprite.svg#icon-phone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -60,166 +61,166 @@
     <main>
       <section class="section">
         <div class="container">
-          <h2 class="section-title hidden">Розробка WEB продуктів</h2>
+          <h2 class="section-title visually-hidden">Розробка WEB продуктів</h2>
           <ul class="price-list">
-            <li class="item">
-              <button class="price-button" type="button">Все</button>
+            <li class="price-list__item">
+              <button class="price-list__button" type="button">Все</button>
             </li>
-            <li class="item">
-              <button class="price-button" type="button">Веб-сайты</button>
+            <li class="price-list__item">
+              <button class="price-list__button" type="button">Веб-сайты</button>
             </li>
-            <li class="item">
-              <button class="price-button" type="button">Приложения</button>
+            <li class="price-list__item">
+              <button class="price-list__button" type="button">Приложения</button>
             </li>
-            <li class="item">
-              <button class="price-button" type="button">Дизайн</button>
+            <li class="price-list__item">
+              <button class="price-list__button" type="button">Дизайн</button>
             </li>
-            <li class="item">
-              <button class="price-button" type="button">Маркетинг</button>
+            <li class="price-list__item">
+              <button class="price-list__button" type="button">Маркетинг</button>
             </li>
           </ul>
           <ul class="work-list">
-            <li class="item">
-              <a href="#" class="work-list-link">
-                <div class="work-list-thumb">
+            <li class="work-list__item">
+              <a href="#" class="work-list__link">
+                <div class="work-list__thumb">
                   <img src="./images/portfolio/portf1.jpg" alt="Веб-сайт" width="370" />
-                  <p class="work-description">
+                  <p class="work-list__description">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
                   </p>
                 </div>
-                <div class="border-list">
-                  <h3 class="title">Технокряк</h3>
-                  <p>Веб-сайт</p>
+                <div class="work-list__border">
+                  <h3 class="work-list__title">Технокряк</h3>
+                  <p class='work-list__text'>Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="item">
-              <a href="#" class="work-list-link">
-                <div class="work-list-thumb">
+            <li class="work-list__item">
+              <a href="#" class="work-list__link">
+                <div class="work-list__thumb">
                   <img src="./images/portfolio/portf2.jpg" alt="Постер" width="370" />
-                  <p class="work-description">
+                  <p class="work-list__description">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
                   </p>
                 </div>
-                <div class="border-list">
-                  <h3 class="title">Постер New Orlean vs Golden Star</h3>
-                  <p>Дизайн</p>
+                <div class="work-list__border">
+                  <h3 class="work-list__title">Постер New Orlean vs Golden Star</h3>
+                  <p class='work-list__text'>Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="item">
-              <a href="#" class="work-list-link">
-                <div class="work-list-thumb">
+            <li class="work-list__item">
+              <a href="#" class="work-list__link">
+                <div class="work-list__thumb">
                   <img src="./images/portfolio/portf3.jpg" alt="Seafood" width="370" />
-                  <p class="work-description">
+                  <p class="work-list__description">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
                   </p>
                 </div>
-                <div class="border-list">
-                  <h3 class="title">Ресторан Seafood</h3>
-                  <p>Приложение</p>
+                <div class="work-list__border">
+                  <h3 class="work-list__title">Ресторан Seafood</h3>
+                  <p class='work-list__text'>Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="item">
-              <a href="#" class="work-list-link">
-                <div class="work-list-thumb">
+            <li class="work-list__item">
+              <a href="#" class="work-list__link">
+                <div class="work-list__thumb">
                   <img src="./images/portfolio/portf4.jpg" alt="Prime" width="370" />
-                  <p class="work-description">
+                  <p class="work-list__description">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
                   </p>
                 </div>
-                <div class="border-list">
-                  <h3 class="title">Проект Prime</h3>
-                  <p>Маркетинг</p>
+                <div class="work-list__border">
+                  <h3 class="work-list__title">Проект Prime</h3>
+                  <p class='work-list__text'>Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="item">
-              <a href="#" class="work-list-link">
-                <div class="work-list-thumb">
+            <li class="work-list__item">
+              <a href="#" class="work-list__link">
+                <div class="work-list__thumb">
                   <img src="./images/portfolio/portf5.jpg" alt="Boxes" width="370" />
-                  <p class="work-description">
+                  <p class="work-list__description">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
                   </p>
                 </div>
-                <div class="border-list">
-                  <h3 class="title">Проект Boxes</h3>
-                  <p>Приложение</p>
+                <div class="work-list__border">
+                  <h3 class="work-list__title">Проект Boxes</h3>
+                  <p class='work-list__text'>Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="item">
-              <a href="#" class="work-list-link">
-                <div class="work-list-thumb">
+            <li class="work-list__item">
+              <a href="#" class="work-list__link">
+                <div class="work-list__thumb">
                   <img src="./images/portfolio/portf6.jpg" alt="Borders" width="370" />
-                  <p class="work-description">
+                  <p class="work-list__description">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
                   </p>
                 </div>
-                <div class="border-list">
-                  <h3 class="title">Inspiration has no Borders</h3>
-                  <p>Веб-сайт</p>
+                <div class="work-list__border">
+                  <h3 class="work-list__title">Inspiration has no Borders</h3>
+                  <p class='work-list__text'>Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="item">
-              <a href="#" class="work-list-link">
-                <div class="work-list-thumb">
+            <li class="work-list__item">
+              <a href="#" class="work-list__link">
+                <div class="work-list__thumb">
                   <img src="./images/portfolio/portf7.jpg" alt="Limited Edition" width="370" />
-                  <p class="work-description">
+                  <p class="work-list__description">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
                   </p>
                 </div>
-                <div class="border-list">
-                  <h3 class="title">Издание Limited Edition</h3>
-                  <p>Дизайн</p>
+                <div class="work-list__border">
+                  <h3 class="work-list__title">Издание Limited Edition</h3>
+                  <p class='work-list__text'>Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="item">
-              <a href="#" class="work-list-link">
-                <div class="work-list-thumb">
+            <li class="work-list__item">
+              <a href="#" class="work-list__link">
+                <div class="work-list__thumb">
                   <img src="./images/portfolio/portf8.jpg" alt="LAB" width="370" />
-                  <p class="work-description">
+                  <p class="work-list__description">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
                   </p>
                 </div>
-                <div class="border-list">
-                  <h3 class="title">Проект LAB</h3>
-                  <p>Маркетинг</p>
+                <div class="work-list__border">
+                  <h3 class="work-list__title">Проект LAB</h3>
+                  <p class='work-list__text'>Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="item">
-              <a href="#" class="work-list-link">
-                <div class="work-list-thumb">
+            <li class="work-list__item">
+              <a href="#" class="work-list__link">
+                <div class="work-list__thumb">
                   <img src="./images/portfolio/portf9.jpg" alt="Business" width="370" />
-                  <p class="work-description">
+                  <p class="work-list__description">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
                   </p>
                 </div>
-                <div class="border-list">
-                  <h3 class="title">Growing Business</h3>
-                  <p>Приложение</p>
+                <div class="work-list__border">
+                  <h3 class="work-list__title">Growing Business</h3>
+                  <p class='work-list__text'>Приложение</p>
                 </div>
               </a>
             </li>
@@ -230,47 +231,47 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-info">
-          <a class="footer-logo" href="./index.html">
-            <span class="first-footer-logo">Web</span>Studio
+          <a class="logo" href="./index.html">
+            Web<span class="logo--white">Studio</span>
           </a>
-          <address class="adress-footer">
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
+          <address class="footer-adress">
+            <p class="footer-adress__place">г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
               <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="footer-adress__link">info@devstudio.com</a>
               </li>
               <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="footer-adress__link">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
         <div class="footer-social">
-          <p>присоединяйтесь</p>
-          <ul class="footer-social-icons">
-            <li class="item">
-              <a href="#">
+          <p class="footer-social__text">присоединяйтесь</p>
+          <ul class="social-icons">
+            <li class="social-icons__item">
+              <a href="#" class="social-icons__link social-icons__link--grey">
                 <svg class="icons" width="20px" height="20px">
                   <use href="./images/icons/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="item">
-              <a href="#">
+            <li class="social-icons__item">
+              <a href="#" class="social-icons__link social-icons__link--grey">
                 <svg class="icons" width="20px" height="20px">
                   <use href="./images/icons/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="item">
-              <a href="#">
+            <li class="social-icons__item">
+              <a href="#" class="social-icons__link social-icons__link--grey">
                 <svg class="icons" width="20px" height="20px">
                   <use href="./images/icons/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="item">
-              <a href="#">
+            <li class="social-icons__item">
+              <a href="#" class="social-icons__link social-icons__link--grey">
                 <svg class="icons" width="20px" height="20px">
                   <use href="./images/icons/sprite.svg#icon-linkedin"></use>
                 </svg>
@@ -279,17 +280,17 @@
           </ul>
         </div>
         <div class="footer-subscription">
-          <label for="email">Подпишитесь на рассылку</label>
-          <div class="subscription-field">
+          <label for="email" class="footer-subscription__label">Подпишитесь на рассылку</label>
+          <div class="footer-subscription__field">
             <input
               type="email"
               name="mail"
               id="email"
               placeholder="E-mail"
-              class="subscription-input"
+              class="footer-subscription__input"
             />
             <button type="submit" class="basic-button" disabled>Подписаться
-              <svg width=24px height=24px>
+              <svg width=24px height=24px class="footer-subscription__svg">
               <use href=./images/icons/sprite.svg#icon-send></use>
             </svg>
             </button>
